--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 aiohttp==3.8.4
 aiosignal==1.3.1
-annotated-types==0.6.0
+annotated-types>=0.6.0
 anyio==3.7.1
 argcomplete==2.0.0
 asttokens==2.4.1
