--- a/requirements.txt
+++ b/requirements.txt
@@ -1,132 +1,13 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-annotated-types>=0.6.0
-anyio==3.7.1
-argcomplete==2.0.0
-asttokens==2.4.1
-async-timeout==4.0.2
-attrs==20.3.0
-Beaker==1.12.1
-beautifulsoup4==4.12.2
-blivet==3.7.1
-blivet-gui==2.4.2
-Brlapi==0.8.4
-burnysc2==6.2.0
-certifi==2022.9.24
-cffi==1.15.1
-chardet==5.2.0
-charset-normalizer==3.1.0
-click==8.1.3
-comm==0.1.4
-cryptography==37.0.2
-cupshelpers==1.0
-dasbus==1.7
-dbus-python==1.3.2
-debugpy==1.8.0
-decorator==5.1.1
-distro==1.8.0
-evdev==1.6.1
-executing==2.0.1
-fastapi==0.104.1
-fedora-third-party==0.10
-file-magic==0.4.0
-fros==1.1
-frozenlist==1.3.3
-gpg==1.17.1
-h11==0.14.0
-humanize==3.13.1
-idna==3.4
-ipykernel==6.26.0
-ipython==8.17.1
-jedi==0.19.1
-jellyfish==0.11.2
-jupyter_client==8.5.0
-jupyter_core==5.5.0
-langtable==0.0.64
-lib50==3.0.6
-libcomps==0.1.20
-loguru==0.6.0
-lutris==0.5.14
-lxml==4.9.2
-Mako==1.2.3
-MarkupSafe==2.1.2
-matplotlib-inline==0.1.6
-moddb==0.8.1
-mpyq==0.2.5
-multidict==6.0.4
-nest-asyncio==1.5.8
-nftables==0.1
-numpy==1.26.1
-olefile==0.46
-opencv-python==4.7.0.72
-packaging==23.0
-parso==0.8.3
-Paste==3.5.2
-pexpect==4.8.0
-pid==2.2.3
-Pillow==9.4.0
-platformdirs==3.11.0
-ply==3.11
-portpicker==1.5.2
-productmd==1.37
-prompt-toolkit==3.0.39
-protobuf==3.20.3
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pwquality==1.4.5
-pycairo==1.23.0
-pycparser==2.20
-pycrypto==2.6.1
-pycups==2.0.1
-pycurl==7.45.2
-pydantic==2.5.1
-pydantic_core==2.14.3
-pydeps==1.12.8
-pyenchant==3.2.2
-Pygments==2.16.1
-PyGObject==3.44.1
-pykickstart==3.47
-pyOpenSSL==21.0.0
-pyparted==3.12.0
-pypresence==4.3.0
-pyrate-limiter==3.1.0
-PySocks==1.7.1
-python-augeas==1.1.0
-python-dateutil==2.8.2
-python-meh==0.51
-pyudev==0.24.0
-pyxdg==0.27
-PyYAML==5.4.1
-pyzmq==25.1.1
-regex==2023.10.3
-requests==2.28.2
-requests-file==1.5.1
-requests-ftp==0.3.1
-rpm==4.18.1
-s2clientprotocol==5.0.11.90136.0
-scipy==1.10.1
-selinux==3.5
-sepolicy==3.5
-setools==4.4.3
-simpleaudio==1.0.4
-simpleline==1.9.0
-six==1.16.0
-sniffio==1.3.0
-sos==4.5.1
-soupsieve==2.4.1
-stack-data==0.6.3
-starlette==0.27.0
-stdlib-list==0.8.0
-submit50==3.1.1
-systemd-python==235
-Tempita==0.5.2
-termcolor==1.1.0
-toolz==0.12.0
-tornado==6.3.3
-traitlets==5.13.0
-typing_extensions==4.8.0
-urllib3==1.26.18
-uvicorn==0.24.0.post1
-wcwidth==0.2.9
-yarl==1.9.2
+Package           Version
+----------------- -------
+anyio             3.7.1
+exceptiongroup    1.1.3
+fastapi           0.104.1
+idna              3.4
+pip               23.3
+pydantic          1.10.12
+setuptools        68.0.0
+sniffio           1.3.0
+starlette         0.27.0
+typing_extensions 4.8.0
+wheel             0.41.2
