--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Package           Version
------------------ -------
+# Package           Version
+# ----------------- -------
 anyio             3.7.1
 exceptiongroup    1.1.3
 fastapi           0.104.1
