--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,11 @@
-# Package           Version
-# ----------------- -------
-anyio             3.7.1
-exceptiongroup    1.1.3
-fastapi           0.104.1
-idna              3.4
-pip               23.3
-pydantic          1.10.12
-setuptools        68.0.0
-sniffio           1.3.0
-starlette         0.27.0
-typing_extensions 4.8.0
-wheel             0.41.2
+anyio==3.7.1
+exceptiongroup==1.1.3
+fastapi==0.104.1
+idna==3.4
+pip==23.3
+pydantic==1.10.12
+setuptools==68.0.0
+sniffio==1.3.0
+starlette==0.27.0
+typing_extensions==4.8.0
+wheel==0.41.2
